--- a/waybar/style.css
+++ b/waybar/style.css
@@ -9,8 +9,9 @@
 
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
+    /* font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif; */
+    font-family: RobotoMono Nerd Font;
+    font-size: 12px;
 }
 
 window#waybar {
